maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  
  for (i<- 0 to getMondeHauteur()){
    for (j<- 0 to getMondeLargeur()){
      if (aBiscuit==true){posBaggle=(j,i)}
    }
  }

    // Your code here
}